--- a/src/app/Components/dashboard/dashboard.component.css
+++ b/src/app/Components/dashboard/dashboard.component.css
@@ -67,6 +67,8 @@ table {
   .container {
     display: flex;
     align-items: center;
+    margin:  0;
+    display: inline;
   } 
 /* 
   .cc{
@@ -81,6 +83,25 @@ table {
   .sss{
     left: 120px;
   }
+
+  .r{
+    margin:  0;
+    display: inline;
+  }
+  .spacer{
+    flex: 1 1 auto;
+  }
+
+
+  .example-icon {
+    padding: 0 14px;
+  }
+  
+  .example-spacer {
+    flex: 1 1 auto;
+  }
+
+
 
 
 
