--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -1,67 +1,97 @@
 
-
 <div style="padding: 1%;">
-    <b>Project Plan</b> <br/>
-    <small> Project Mgmt. >> Project Plan</small> <br/><br/>
-    <div class='container'>
-        <mat-form-field >
-            <mat-label>Project Name</mat-label>
-            <mat-select [(value)]="prjSelected" >
-                @for (food of projectName; track food) {
-                <mat-option [value]="food.name">{{food.name}}</mat-option>
-                }
-            </mat-select>
-        </mat-form-field> &nbsp;&nbsp;
 
-        <mat-form-field>
-            <mat-label>Project Name</mat-label>
-            <mat-select [(value)]="subPrjSelected">
-                @for (food of subProjectName; track food) {
-                <mat-option [value]="food.name">{{food.name}}</mat-option>
-                }
-            </mat-select>
-        </mat-form-field>
-
-        <span style="margin-left: 28%;"><mat-icon>add</mat-icon></span>   Add Project &nbsp;&nbsp;
-
-        <span><mat-icon>add</mat-icon></span>   Add Milestone/Task &nbsp;&nbsp;&nbsp;
-
-        <span><mat-icon> border_color</mat-icon></span>  &nbsp; Change Status &nbsp;&nbsp;
-
-        <span> <mat-icon>person_outline</mat-icon></span>   Assign &nbsp; &nbsp;
-
-        <span> <mat-icon>delete_outline</mat-icon></span>   Delete Project 
+  <b>Project Plan</b> <br/>
+  <small> Project Mgmt. >> Project Plan</small> <br/><br/>
 
 
+<div style="height: 83vh;">
+  <mat-toolbar style="background-color:transparent;">
+    <!-- <span>Responsive Navigation</span> -->
 
-            
+    <span>
+      <mat-form-field >
+        <mat-label>Project Name</mat-label>
+        <mat-select [(value)]="prjSelected" >
+            @for (f of projectName; track f) {
+            <mat-option [value]="f.name">{{f.name}}</mat-option>
+            }
+        </mat-select>
+    </mat-form-field> &nbsp;&nbsp;
+    </span>
 
+    <span>
+      <mat-form-field>
+        <mat-label>Project Name</mat-label>
+        <mat-select [(value)]="subPrjSelected">
+            @for (f of subProjectName; track f) {
+            <mat-option [value]="f.name">{{f.name}}</mat-option>
+            }
+        </mat-select>
+    </mat-form-field>
+    </span>
 
+    <span class="example-spacer"></span>
 
+    <div fxShow="true" fxHide.lt-md="true">
+      <!-- The following menu items will be hidden on both SM and XS screen sizes -->
+      <!-- <a href="#" mat-button>Menu Item 1</a>
+      <a href="#" mat-button>Menu Item 2</a>
+      <a href="#" mat-button>Menu Item 3</a>
+      <a href="#" mat-button>Menu Item 4</a>
+      <a href="#" mat-button>Menu Item 5</a>
+      <a href="#" mat-button>Menu Item 6</a> -->
 
-        
-        
-
+      <a mat-button style="color:white"><mat-icon class="r" style="color:white">add</mat-icon>Add Project</a>
+          <a mat-button style="color:white"><mat-icon class="r" style="color:white">add</mat-icon>Add Milestone/Task</a>
+          <a mat-button style="color:white"><mat-icon class="r" style="color:white">border_color</mat-icon>Change Status</a>
+          <a mat-button style="color:white"><mat-icon class="r" style="color:white">person_outline</mat-icon>Assign</a>
+          <a mat-button style="color: white"><mat-icon class="r" style="color: white">delete_outline</mat-icon>Delete</a>
     </div>
-    <table mat-table
+
+    <div fxShow="true" fxHide.gt-sm="true">
+      <a mat-button (click)="sidenav.toggle()"><mat-icon class="r" style="color:white">menu</mat-icon></a>
+      <!-- <a (click)="sidenav.toggle()">Show Side Menu</a> -->
+    </div>
+  </mat-toolbar>
+
+  <mat-sidenav-container fxFlexFill class="example-container">
+    <mat-sidenav #sidenav fxLayout="column">
+      <div fxLayout="column">
+        <!-- <a (click)="sidenav.toggle()" href="#" mat-button>Close</a> -->
+
+        <!-- <mat-icon class="r" style="color:black">add</mat-icon> -->
+
+        <a mat-button style="color:black" (click)="sidenav.toggle()"><mat-icon class="r" style="color:black">close</mat-icon></a>
+        <a mat-button style="color:black"><mat-icon class="r" style="color:black">add</mat-icon>Add Project</a>
+          <a mat-button style="color:black"><mat-icon class="r" style="color:black">add</mat-icon>Add Milestone/Task</a>
+          <a mat-button style="color:black"><mat-icon class="r" style="color:black">border_color</mat-icon>Change Status</a>
+          <a mat-button style="color:black"><mat-icon class="r" style="color:black">person_outline</mat-icon>Assign</a>
+          <a mat-button style="color: black"><mat-icon class="r" style="color: black">delete_outline</mat-icon>Delete</a>
+      </div>
+    </mat-sidenav>
+    <mat-sidenav-content fxFlexFill style="background-color: black;">
+
+
+      <table mat-table
        [dataSource]="dataSource" multiTemplateDataRows
        class="mat-elevation-z8">
        
   @for (column of columnsToDisplay; track column) {
     <ng-container matColumnDef="{{column}}">
       <th mat-header-cell *matHeaderCellDef [style.background-color]="bgcolor" [style.color]="color"> {{column}} </th>
-        @if(column == 'startDate'){
+        @if(column == 'Start Date'){
             <td mat-cell *matCellDef="let element"> {{element[column] | dataPipe}}</td>
             
-        }@else if (column == 'endDate') {
+        }@else if (column == 'End Date') {
             <td mat-cell *matCellDef="let element"> {{element[column] | dataPipe}}</td>
-        } @else if (column == 'status') {
+        } @else if (column == 'Status') {
             <td mat-cell *matCellDef="let element"> 
             @if(element[column] == 'Pending') {
-                <button mat-raised-button  color="warn" (click)="changeValue(element)">Pending</button>
+                <button mat-raised-button  style="width: 115px !important; color: white; background-color: rgb(12, 168, 116);">Pending</button>
             }  @else {
                 <!-- <button mat-raised-button disabled>Disabled</button> -->
-                <button mat-flat-button color="primary" (click)="changeValue(element)">Completed</button>
+                <button mat-flat-button style="width: 115px !important; color: white; background-color: rgb(10, 153, 205);">Completed</button>
             }  
             </td>
         }   
@@ -100,7 +130,24 @@
           <div class="example-element-weight"> {{element.weight}} </div>
         </div> -->
         <div class="example-element-description">
-         Description:  {{element.description}}
+         Description:  {{element.description}} 
+         <ul>
+          @for (food of dataSrc; track food) {
+            <!-- <mat-option [value]="food.name">{{food.name}}</mat-option> -->
+              @if( element.id == food.parentId) {
+                <br/> <li><span>ID: {{food.id}}</span>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <span>Description: {{food.description}}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <span> Status: 
+                  <mat-slide-toggle class="example-margin" [color]="color" [checked]="food.Status == 'Pending' ? false: true" (change)="setValue($event, food )">
+                   {{food.Status}}
+                  </mat-slide-toggle>
+
+                </span>
+              </li>
+              }
+            }
+         </ul>
+         
           <span class="example-element-description-attribution"> </span>
         </div>
       </div>
@@ -115,4 +162,6 @@
   </tr>
   <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 </table>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
 </div>
